# AOMaaS-Autonomous-Open-Source-Maintainer-as-a-Service-

./: .env.example  .gitignore  Dockerfile  INSTALLATION.md  PROJECT_SUMMARY.md  README.md  aomass.code-workspace  aomass.html  demo.py  docker-compose.yml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  run_demo.py  simple_app.py
docs/: README.md  api.md  api_reference.md  architecture.md  contributing.md  deployment.md  getting_started.md  installation.md  mcp_architecture.md
scripts/: deploy-frontend.sh  deploy.sh  setup-dev.sh  test_mcp.sh
src/aomass/api/: auth.py  demo.py  main.py  routes.py
src/aomass/config/: settings.py
src/aomass/core/: services.py  worker.py
src/aomass/core/tasks/: indexer.py
src/aomass/models/: api.py  core.py  providers.py
src/aomass/providers/: __init__.py  factory.py  github_provider.py  gitlab_provider.py
src/aomass/services/: implementer.py  indexer.py  miner.py  planner.py  pr_manager.py  reviewer.py
src/aomass/utils/: db.py  error_handling.py  github.py  logging.py  middleware.py
src/cli/: main.py
src/workflows/: full_maintenance.yaml  security_fix.yaml
static/css/: demo.css  style.css  styles.css
static/js/: demo.js  main.js
templates/: demo.html  index.html
tests/: conftest.py
tests/integration/: test_github_provider.py  test_gitlab_provider.py  test_mcp_integration.py
tests/unit/: test_api.py  test_services.py
