[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aomass"
version = "0.1.0"
description = "Autonomous Open-Source Maintainer as a Service"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AOMaaS Team", email = "team@aomass.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "qdrant-client>=1.7.0",
    "minio>=7.2.0",
    "pygithub>=2.1.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0"
]
full = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "tree-sitter>=0.20.0",
    "gitpython>=3.1.40",
    "prometheus-client>=0.19.0"
]

[project.scripts]
aomass = "aomass.cli.main:app"

[project.urls]
Homepage = "https://github.com/aomass/aomass"
Documentation = "https://docs.aomass.dev"
Repository = "https://github.com/aomass/aomass"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\.pyi?$"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["aomass"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"
